<resources>
    <string name="app_name">FeedNews</string>
    <string name="projects">Projects</string>
    <string name="info">Info</string>
    <string name="header_name">Лента новостей</string>
    <string name="first_news">ИТ – новая нефть</string>
    <string name="second_news">Oclean X Ultra: зубная щетка с Wi-Fi и Bluetooth</string>
    <string name="third_news">Как вернуть ИИ в реальный мир и заставить говорить правду?</string>
    <string name="fourth_news">Интеграция данных: баланс между «быстро» и «хорошо»</string>
    <string name="fifth_news">Компетенции цифрового руководителя</string>
    <string name="sixth_news">Стратегии быстрой разработки продуктов в условиях высокой конкуренции за кадры</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="title">
        <item>Название статьи</item>
        <item>ИТ – новая нефть</item>
        <item>Oclean X Ultra: зубная щетка с Wi-Fi и Bluetooth</item>
        <item>Как вернуть ИИ в реальный мир и заставить говорить правду?</item>
        <item>Интеграция данных: баланс между «быстро» и «хорошо»</item>
        <item>Компетенции цифрового руководителя</item>
        <item>Стратегии быстрой разработки продуктов в условиях высокой конкуренции за кадры</item>
    </string-array>
    <string-array name="author">
        <item>Автор: </item>
        <item>Автор: Кирилл Кнауб</item>
        <item>Автор: Андрей Виноградов</item>
        <item>Автор: неизвестен</item>
        <item>Автор: Григорий Рудницкий</item>
        <item>Автор: Джимшер Челидзе</item>
        <item>Автор: Юрий Недре</item>
    </string-array>
    <string name="title_default">ИТ – новая нефть</string>
    <string name="author_default">Автор: Кирилл Кнауб</string>
    <string name="text_deafult">По данным Cloud.ru, в 2022 году ИТ-рынок России вырос на 200 млрд рублей. Вопреки прогнозам санкционное давление со стороны западных стран не ослабило его, а заставило перестроиться и адаптироваться к современным условиям. В результате у отечественного ИТ-бизнеса появился стимул создавать собственные продукты и предлагать услуги, занимая ниши, которые освободились после ухода западных вендоров.

Занять свободный стул
Все мы в детстве играли в «музыкальные стулья»: бегали под музыку вокруг расставленных в кружок стульев, а когда мелодия заканчивалась, спешили занять один из них – ведь стульев было меньше, чем игроков.

Эта игра – наглядная иллюстрация того, что происходит сейчас в российском ИТ-секторе. Из-за перемен, связанных с событиями последних лет, многие его участники оказались в состоянии бегающих вокруг стульев: ниши, занимаемые западными компаниями, освобождаются и наступает самый подходящий момент, чтобы поскорее их занять. Есть, правда, одно отличие: даже если тебе не хватит стула, всегда можно принести еще один – свой собственный – и расширить круг «игры». Главное в этой «игре» – чтобы стул, который вы приносите, то есть продукт, оказался интересным.

За один только 2022 год этот круг расширился уже на 200 млрд рублей по сравнению с 2021 годом. Что же касается топовых ИТ-компаний, то их обороты выросли на 18,3%.

Кстати: доля ИТ-рынка в ВВП России приближается к 2%, а в мировом ВВП составляет 2,9%.

Кому нужна российская «новая нефть»
Многие крупные компании, в том числе государственные, находятся сейчас в стадии цифровой трансформации, держат курс на импортозамещение и поэтому государство покровительствует ИТ. Если вы создаете продукт для госструктур, можно смело рассчитывать на субсидии от Минцифры, «Руссофта», «Сколково» и других организаций, а также на льготы и низкую налоговую ставку.

Особенность государственных корпораций – более длительные циклы согласования и принятия решений. Зато в частных компаниях, которые не хотят зависеть от изменений, связанных с поставками зарубежного ПО, и тоже заинтересованы в российских альтернативах, большинство процессов стремится к оптимизации. И, кстати, для этих целей тоже нужны ИТ-разработки – от программ внедрения ИИ в рутинные процессы до миграционных решений для микросервисов.

Российские ИТ-разработки нужны не только в самой России, но и в других странах. Например, Бразилии с ее свободным рынком и аудиторией, готовой принимать инновации, Индии с ее Бангалором (индийским аналогом американской Кремниевой долины), Индонезии с ее четвертым по величине рынком мира и нацеленностью на развитие технологий и цифровизацию. Для всех этих и других регионов Россия – это страна, которая традиционно славится сильными математиками и специалистами в сфере ИТ. Наконец, ИТ-продукты нужны рядовым российским пользователям, которые уже перевели большинство деловых и бытовых задач в онлайн-формат.

Кстати: выручка крупнейших российских ИТ-компаний из рейтинга CNews100 выросла в 2022 году почти на 9%.
</string>
</resources>