<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/tv_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded"
        android:padding="5dp"
        android:text="@string/first_news" />

    <TextView
        android:id="@+id/tv_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded"
        android:padding="5dp"
        android:text="@string/second_news" />

    <TextView
        android:id="@+id/tv_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded"
        android:padding="5dp"
        android:text="@string/third_news" />

    <TextView
        android:id="@+id/tv_fourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded"
        android:padding="5dp"
        android:text="@string/fourth_news" />

    <TextView
        android:id="@+id/tv_fifth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded"
        android:padding="5dp"
        android:text="@string/fifth_news" />

    <TextView
        android:id="@+id/tv_sixth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded"
        android:padding="5dp"
        android:text="@string/sixth_news" />

</androidx.appcompat.widget.LinearLayoutCompat>